--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
                 ></a-entity>
             </a-marker>
 
+                <a-camera
+                    gps-camera 
+                    arjs-look-controls='smoothingFactor: 0.1'
+                    rotation-reader
+                ></a-camera>
+            
             <a-entity camera></a-entity>
         </a-scene>
     </body>
