--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <a-entity
                     id="bowser-model"
                     scale="0.16386116928032107 0.16386116928032107 0.16386116928032107"
+                    rotation="0 90 0"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
                     class="clickable"
