--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <a-asset-item
                     id="animated-asset"
                     src="assets/asset.glb"
+                    rotation="45 90 180"
                 ></a-asset-item>
             </a-assets>
 
