--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             <a-marker
                 id="animated-marker"
                 type="pattern"
+                position="0 0 0"
+                rotation="90 0 0"
                 preset="custom"
                 url="assets/marker.patt"
                 raycaster="objects: .clickable"
