--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
 
             <a-marker
                 id="animated-marker"
-                type="pattern"
-                position="0 0 0"
-                rotation="0 0 90"
+                type="pattern"                
                 preset="custom"
                 url="assets/marker.patt"
                 raycaster="objects: .clickable"
@@ -49,6 +47,10 @@
 
             <a-entity camera>
                 ></a-camera>
+            </a-entity>
+            <a-entity
+          position="0 0 0"
+          rotation="90 0 0"
             </a-entity>
         </a-scene>
     </body>
